pkg/ibmvpc/examples/out/explain_out/GroupingExternalSG1_all_vpcs_explain.txt
Explaining connectivity from vsi1-ky to 161.26.0.0/8 within test-vpc1-ky
========================================================================

Allowed connections from vsi1-ky[10.240.10.4] to Public Internet 161.26.0.0/16: protocol: UDP

Path:
	vsi1-ky[10.240.10.4] -> security group sg1-ky -> subnet1-ky -> network ACL acl1-ky -> 
	PublicGateway public-gw-ky -> 
	Public Internet 161.26.0.0/16

------------------------------------------------------------------------------------------------------------------------

No connections are allowed from vsi1-ky[10.240.10.4] to Public Internet 161.0.0.0-161.25.255.255,161.27.0.0-161.255.255.255;
connection is blocked by egress

External traffic via PublicGateway: public-gw-ky
Egress: security group sg1-ky blocks connection; network ACL acl1-ky allows connection

Path:
	vsi1-ky[10.240.10.4] -> |

------------------------------------------------------------------------------------------------------------------------
